# ast_lib

./: .gitignore  Makefile  README.md  gram.html  pyproject.toml  snippet.excalidraw  snippet.py
ast_lib/: __init__.py  dsl_parser.py  ideas.py  match_pattern.py  nodes.py  pattern.py  test.py  test_match_pattern.py  test_patterns.py  testcase_generator.py  todo.py  utils.py
ast_lib/pattern/: __init__.py  dsl_parser.py  match_pattern.py  nodes.py  parse.py  parser_helpers.py
ast_lib/visitor/: __init__.py  context.backup.pyi  context.proto.pyi  context.py  context.pyi  core.py  exception.py  presets.backup.pyi  presets.proto.pyi  presets.py  presets.pyi  reducer.backup.pyi  reducer.new.py  reducer.proto.pyi  reducer.py  reducer.pyi  test.py  utils.py
scripts/: gen_nodes.py  gen_parsers.py  generated_parser.py  sync_visitor_with_pyi.py  testcase_metagenerator.py  testcase_metagenerator_backup.py  transform_visitor_pyi.py  unparser.py  utils.py  vis_python_gram.py
scripts/data/: match.gram  match.gramjs  match_backup.gram  metagrammar.gram  modified_metagrammar.gram  test_new_grammar.gram  testsuites  testsuites_simple
tests/: test_match_pattern.py  test_patterns.py  test_testcase_gen.py  test_types.py
tests/visitor/: test_composed.py  test_context.py  test_presets.py
