[project]
name = "ast-lib"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "hypothesis>=6.124.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "pegen>=0.3.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pyvis>=0.3.2",
    "ruff>=0.9.3",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "ast_lib",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
